test/rules/single_criterion/resource_limit/cpu_min_req/rule.json
{
  "rules": [
    {
      "category": "Kubernetes",
      "cfg_type": "user_created",
      "comment": "Deny pods whose container CPU request is less than 1 core",
      "containers": [
        "containers"
      ],
      "criteria": [
        {
          "name": "resourceLimit",
          "op": "",
          "path": "resourceLimit",
          "sub_criteria": [
            {
              "name": "cpuRequest",
              "op": "<=",
              "path": "cpuRequest",
              "value": "1"
            }
          ],
          "value": ""
        }
      ],
      "critical": false,
      "disable": false,
      "id": 1000,
      "rule_mode": "protect",
      "rule_type": "deny"
    }
  ]
}
